--- a/BuildDrop/index.html
+++ b/BuildDrop/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" theme-data="dark">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/favicon.ico" />
